welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:15: error: ';' expected but ')' found.
      setPos(j,6-Math.abs(j-i)))
                               ^